# -

./: db.sqlite3  pyproject.toml
auction/: admin.py  models.py  ns.py  serializers.py  urls.py  views.py
auction/migrations/: 0001_initial.py  0002_alter_product_images_alter_product_name_and_more.py  0003_alter_product_options_purchase.py  0004_alter_purchase_options_alter_purchase_count.py
auction/static/auction/css/: style.css
auction/templates/auction/: about.html  base.html  cat.html  home.html  podd.html
home/: settings.py  urls.py
