[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["NIK <nikita1z@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.5.0"
django = ">=4.0.0,<4.1.0"
django-filter = "^23.2"
django-social-auth = "^0.7.28"
psycopg2 = "^2.9.6"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
